[project]
name = "xianyu-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wuch", email = "wuchx19@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pillow>=12.0.0",
    "requests>=2.32.5",
]

[project.scripts]
xianyu-crawler = "xianyu_crawler:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
